<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    tools:context="com.example.faizan.studentmanagementapp.Login">

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:text="@string/submit"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimary"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:text="123"
        android:inputType="textPassword"
        android:padding="15dp"
        android:imeActionId="@android:integer/config_longAnimTime"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/name"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:text="r@gmail.com"
        android:padding="15dp"
        android:layout_marginTop="78dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/pass"
        android:layout_alignStart="@+id/pass" />

</RelativeLayout>
