<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/reg"
    tools:context="com.example.faizan.studentmanagementapp.Registration">

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"

        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">
<ImageView
    android:id="@+id/back"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:background="@drawable/back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:text="Registration"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_below="@+id/head"
        android:id="@+id/etname"/>
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@+id/etname"
        android:layout_alignLeft="@+id/etname"
        android:layout_alignStart="@+id/etname"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile"
        android:layout_below="@id/email"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mobile"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender:-"
            android:textStyle="bold"
            android:textSize="15dp"
            android:layout_marginLeft="10dp"
            />


        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rmale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Male"
            android:checked="true"/>
        <RadioButton
            android:id="@+id/rfemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Female"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear1"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Course:-"
            android:textSize="15dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>
        <CheckBox
            android:id="@+id/chkAndroid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Android"/>
        <CheckBox
            android:id="@+id/chkIos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ios"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registered"
        android:layout_below="@id/linear2"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="40dp"/>

</RelativeLayout>
